# Fast-DDS-Communication-Manager

./: .gitmodules  CMakeLists.txt
PacketTypes/: GPSPosition.idl  batteryVoltage.idl  carTilt.idl  engineTemp.idl  header.idl  raceInstructions.idl  velocity.idl  wheelData.idl  windSpeed.idl
html/: CommunicationManager_8h_source.html  FastDDS_8h_source.html  GPSPositionPubSubTypes_8h.html  GPSPositionPubSubTypes_8h__dep__incl.map  GPSPositionPubSubTypes_8h__dep__incl.md5  GPSPositionPubSubTypes_8h__incl.map  GPSPositionPubSubTypes_8h__incl.md5  GPSPositionPubSubTypes_8h_source.html  GPSPosition_8h.html  GPSPosition_8h__dep__incl.map  GPSPosition_8h__dep__incl.md5  GPSPosition_8h__incl.map  GPSPosition_8h__incl.md5  GPSPosition_8h_source.html  GPSPosition_8idl_source.html  Packets_8h_source.html  annotated.html  batteryVoltagePubSubTypes_8h.html  batteryVoltagePubSubTypes_8h__dep__incl.map  batteryVoltagePubSubTypes_8h__dep__incl.md5  batteryVoltagePubSubTypes_8h__incl.map  batteryVoltagePubSubTypes_8h__incl.md5  batteryVoltagePubSubTypes_8h_source.html  batteryVoltage_8h.html  batteryVoltage_8h__dep__incl.map  batteryVoltage_8h__dep__incl.md5  batteryVoltage_8h__incl.map  batteryVoltage_8h__incl.md5  batteryVoltage_8h_source.html  batteryVoltage_8idl_source.html  carTiltPubSubTypes_8h.html  carTiltPubSubTypes_8h__dep__incl.map  carTiltPubSubTypes_8h__dep__incl.md5  carTiltPubSubTypes_8h__incl.map  carTiltPubSubTypes_8h__incl.md5  carTiltPubSubTypes_8h_source.html  carTilt_8h.html  carTilt_8h__dep__incl.map  carTilt_8h__dep__incl.md5  carTilt_8h__incl.map  (+200 more)
src/: FastDDS.h  (+7 more)
(+184 files in other folders)
